--- a/about.html
+++ b/about.html
@@ -24,10 +24,10 @@
             <a href="services.html" class="mr-5 hover:text-gray-900">OUR YOUTUBE CHANNEL</a>
             <a href="contacts.html" class="mr-5 hover:text-gray-900">CONTACTS</a>
         </nav>
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                 class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
+        <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+             class="w-4 h-4 ml-1" viewBox="0 0 24 24">
+            <path d="M5 12h14M12 5l7 7-7 7"></path>
+        </svg>
         </button>
     </div>
 </header>
@@ -40,37 +40,29 @@
                 WELCOME TO Elementsoftech...
                 <br class="hidden lg:inline-block">We welcome you heartily
             </h1>
-            <p class="mb-8 leading-relaxed">Hello , and welcome to Elementsoftech. This is a website for us to show our exclusive projects made by Elementsoftech. We like to help people and we do. We will be posting and helping you...Excited? Well thats just the tip of the iceberg.</p>
-            <div class="flex justify-center">
-            </div>
-            <section class="text-gray-700 body-font overflow-hidden">
-                <div class="container px-5 py-24 mx-auto">
-                    <div class="-my-8">
-                        <div class="py-8 flex flex-wrap md:flex-no-wrap">
-                            <div class="md:w-64 md:mb-0 mb-6 flex-shrink-0 flex flex-col">
-                                <span class="tracking-widest font-medium title-font text-gray-900">OUR BEST PROJECT DONE TILL NOW...
-            VIEW VECTOR5 THE NEW A.I. NOTHING IS FASTER!!! HURRY UP IT WAS JUST RELEASED NOW!!!YES YOU CAN DOWNLOAD VECTOR 5
-                                    AFTER SOME TIME
-
-
-
-          </span>
-
-                        </div>
-                        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-                            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/1600x900/?technology,programming">
-                        </div>
-                    </div>
-            </section>
+            <p class="mb-8 leading-relaxed">Hello , and welcome to Elementsoftech. This is a website for us to show our exclusive projects made by Elementsoftech. We like to help people and we do. We will be posting and helping you...Excited? Well thats just the tip of the iceberg.
             <hr>
-                        <span class="ml-3 text-xl">Elementsoftech</span>
-                    </a>
-                    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">©️ 2020
-                        tailblocks —
-                        <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer"
-                           target="_blank">@knyttneve</a>
-                    </p>
-                    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
+            VECTOR 5 COMING SOON... WEBHELPER THE AMAZING SOFTWARE FOR FULL AUTOMATION ... RELEASED ON 10 SEPTEMBER 2020... CLICK ON BELOW TO DOWNLOAD<p/>
+            <div class="flex justify-center">
+                <p style="color:#FF0000";></p><a href="WHsetup.exe">DOWNLOAD WEBHELPER HERE</a>
+
+            </div>
+        </div>
+        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/1600x900/?technology,programming">
+            <img align="right">
+        </div>
+    </div>
+</section>
+<hr>
+<span class="ml-3 text-xl">Elementsoftech</span>
+</a>
+<p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">©️ 2020
+    tailblocks —
+    <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer"
+       target="_blank">@knyttneve</a>
+</p>
+<span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
                 <a class="text-gray-500">
                     <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
                          viewBox="0 0 24 24">
@@ -101,7 +93,7 @@
                     </svg>
                 </a>
             </span>
-                </div>
-            </footer>
+</div>
+</footer>
 </body>
 </html>
