--- a/contacts.html
+++ b/contacts.html
@@ -22,7 +22,7 @@
         <nav
                 class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
             <a href="home.html" class="mr-5 hover:text-gray-900">HOME</a>
-            <a href="about.html" class="mr-5 hover:text-gray-900">ABOUT</a>
+            <a href="Products.html" class="mr-5 hover:text-gray-900">ABOUT</a>
             <a href="contacts.html" class="mr-5 hover:text-gray-900">CONTACTS</a>
         </nav>
         <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
