--- a/Products.html
+++ b/Products.html
@@ -42,17 +42,25 @@
             </h1>
             <p class="mb-8 leading-relaxed">Hello , and welcome to Elementsoftech. This is a website for us to show our exclusive projects made by Elementsoftech. We like to help people and we do. We will be posting and helping you...Excited? Well thats just the tip of the iceberg.
             <hr>
-            VECTOR 5 COMING SOON... WEBHELPER THE AMAZING SOFTWARE FOR FULL AUTOMATION ... RELEASED ON 10 SEPTEMBER 2020... CLICK ON BELOW TO DOWNLOAD<p/>
+            VECTOR 5 COMING SOON... WEBHELPER THE AMAZING SOFTWARE FOR FULL AUTOMATION ... RELEASED ON 10 SEPTEMBER 2020... CLICK BELOW LINK TO DOWNLOAD WEBHELPER...WORX YOUR VERY OWN LIGHTWEIGHT AND VERY EFFECTIVE NOTEWRITER AND TEXTEDITOR, ALL TO SAVE .PY, .HTML, .CSS, .JS, .TXT, AND .MD FILES MEANING 6 TYPES OF FILE SAVER IN JUST ONE APPLICATION...CLICK THE LINK SAYING 'DOWNLOAD WORX HERE'...  <p/>
             <div class="flex justify-center">
-                <p style="color:#FF0000";></p><a href="WHsetup.exe">DOWNLOAD WEBHELPER HERE</a>
+                <p style="color:#FF0000";></p><a href="WHsetup.exe">\\DOWNLOAD WEBHELPER HERE...//</a>
+                <hr/>
+                <hr>
+                <div class="flex justify-center">
+                    <p style="color:#FF0000";></p><a href="WorX(v1.0).exe">\\DOWNLOAD WORX HERE...//</a>
+                    <hr/>
+
+                </div>
+            </div>
+            <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
+                <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/1600x900/?technology,programming">
+                <img align="right">
 
             </div>
+
         </div>
-        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/1600x900/?technology,programming">
-            <img align="right">
-        </div>
-    </div>
+
 </section>
 <hr>
 <span class="ml-3 text-xl">Elementsoftech</span>
@@ -96,4 +104,3 @@
 </div>
 </footer>
 </body>
-</html>
