--- a/home.html
+++ b/home.html
@@ -1,174 +1,107 @@
 <!DOCTYPE html>
-<html lang = "en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="veiwport" content="width=device-width,initial scale=1.0">
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
-    <title>Elementsoftech</title>
-</head>
+<html lang="en">
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
+.w3-bar,h1,button {font-family: "Montserrat", sans-serif}
+.fa-desktop,.fa-coffee {font-size:200px}
+</style>
 <body>
-<header class="text-gray-700 body-font">
-    <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
-        <a class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
-                 stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-                 viewBox="0 0 24 24">
-                <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-            </svg>
-            <span class="ml-3 text-xl">Elementsoftech</span>
-        </a>
-        <nav
-                class="md:mr-auto md:ml-4 md:py-1 md:pl-4 md:border-l md:border-gray-400	flex flex-wrap items-center text-base justify-center">
-            <a href="home.html" class="mr-5 hover:text-gray-900">HOME</a>
-            <a href="Products.html" class="mr-5 hover:text-gray-900">PRODUCTS</a>
-            <a href="services.html" class="mr-5 hover:text-gray-900">OUR YOUTUBE CHANNEL</a>
-            <a href="contacts.html" class="mr-5 hover:text-gray-900">CONTACTS</a>
-        </nav>
-            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                 class="w-4 h-4 ml-1" viewBox="0 0 24 24">
-                <path d="M5 12h14M12 5l7 7-7 7"></path>
-            </svg>
-        </button>
+
+<!-- Navbar -->
+<!-- Navbar -->
+<div class="w3-top">
+    <div class="w3-bar w3-red w3-card w3-left-align w3-large">
+        <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+        <a href="home.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+        <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Products</a>
+        <a href="contacts.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contacts</a>
+        <a href="you.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Youtube Channel</a>
     </div>
+
+    <!-- Navbar on small screens -->
+    <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 1</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 2</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a>
+    </div>
+</div>
+
+<!-- Header -->
+<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+    <h1 class="w3-margin w3-jumbo">HEY THERE!!!</h1>
+    <p class="w3-xlarge">Looking for something to download? Go down..</p>
+    <img src="bro.png"/>
 </header>
 
-<section class="text-gray-700 body-font">
-    <div class="container mx-auto flex px-5 py-24 md:flex-row flex-col items-center">
-        <div
-                class="lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center">
-            <h1 class="title-font sm:text-4xl text-3xl mb-4 font-medium text-gray-900">
-                WELCOME TO Elementsoftech...
-                <br class="hidden lg:inline-block">We welcome you heartily
-            </h1>
-            <p class="mb-8 leading-relaxed">Hello , and welcome to Elementsoftech. This is a website for us to show our exclusive projects made by Elementsoftech. We like to help people and we do. We will be posting and helping you...Excited? Well thats just the tip of the iceberg.</p>
-            <div class="flex justify-center">
-            </div>
-            <hr>
-            <section class="text-gray-700 body-font overflow-hidden">
-                <div class="container px-5 py-24 mx-auto">
-                    <div class="-my-8">
-                        <div class="py-8 flex flex-wrap md:flex-no-wrap">
-                            <p class="mb-8 leading-relaxed">THIS IS ELEMENTSOFTECH AND WE DREAM FOR THE BEST FUTURE WE KEEP ON MAKING DIFFERENT PROJECTS ALL TO HELP YOU SUCCEED ON WITH YOUR LIFE AND LIVING IT WITH THE ULTIMATE QUALITY...PLEASE HELP US SUCCEED. SPREAD THE WORD. IT WILL BE APPRECIATED... OKAY SO LET ME TELL YOU ALL ABOUT ELEMENTSOFTECH... IT WAS FOUND BY THREE STUDENTS IN CLASS 7... THEY ARE :_ PIYUSH DHOBLE, SHAURYA PANDEY, AND ARNAV BHOSALE YOU WANT TO KNOW MORE ABOUT THEM?? GO VISIT THE CONTACTS PAGE</p>
+<!-- First Grid -->
+<div class="w3-row-padding w3-padding-64 w3-container">
+    <div class="w3-content">
+        <div class="w3-twothird">
+            <h1>Welcome to Elementsoftech...</h1>
+            <h5 class="w3-padding-32">Hello , and welcome to Elementsoftech. This is a website for us to show our exclusive projects made by Elementsoftech. We like to help people and we do. We will be posting and helping you...Excited? Well thats just the tip of the iceberg.</h5>
 
-                            <hr>
-                            <div class="flex justify-center">
-                                <span class="mt-1 text-gray-500 text-sm">
+            <p class="w3-text-grey"> VECTOR 5 COMING SOON... WEBHELPER THE AMAZING SOFTWARE FOR FULL AUTOMATION ... RELEASED ON 10 SEPTEMBER 2020... CLICK BELOW LINK TO DOWNLOAD WEBHELPER...WORX YOUR VERY OWN LIGHTWEIGHT AND VERY EFFECTIVE NOTEWRITER AND TEXTEDITOR, ALL TO SAVE .PY, .HTML, .CSS, .JS, .TXT, AND .MD FILES MEANING 6 TYPES OF FILE SAVER IN JUST ONE APPLICATION...CLICK THE LINK SAYING 'DOWNLOAD WORX HERE'...  <p/>
+            <p style="color:#FF0000";></p><a href="WHsetup.exe">DOWNLOAD WEBHELPER HERE...</a>
+            <p style="color:#FF0000";></p><a href="WorX(v1.0).exe">DOWNLOAD WORX HERE</a>
+        </div>
 
-                            </div>
 
-                        </div>
-                        <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-                            <img class="object-cover object-center rounded" alt="hero" src="https://source.unsplash.com/1600x900/?technology,programming">
-                        </div>
-                    </div>
-            </section>
-            <hr>
-            <section class="text-gray-700 body-font">
-                <div class="container px-5 py-24 mx-auto">
-                    <div class="flex flex-col text-center w-full mb-20">
-                        <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900"> The fantabulous family of Elementsoftech...
-                        </h1>
-                        <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Well you see how our website is connected with thousands of people. Do not worry you are one of them too...</p>
-                    </div>
-                    <div class="flex flex-wrap -m-4 text-center">
-                        <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-                            <div class="border-2 border-gray-200 px-4 py-6 rounded-lg">
-                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                     stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
-                                    <path d="M8 17l4 4 4-4m-4-5v9"></path>
-                                    <path d="M20.88 18.09A5 5 0 0018 9h-1.26A8 8 0 103 16.29"></path>
-                                </svg>
-                                <h2 class="title-font font-medium text-3xl text-gray-900">2.7K</h2>
-                                <p class="leading-relaxed">Downloads</p>
-                            </div>
-                        </div>
-                        <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-                            <div class="border-2 border-gray-200 px-4 py-6 rounded-lg">
-                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                     stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
-                                    <path d="M17 21v-2a4 4 0 00-4-4H5a4 4 0 00-4 4v2"></path>
-                                    <circle cx="9" cy="7" r="4"></circle>
-                                    <path d="M23 21v-2a4 4 0 00-3-3.87m-4-12a4 4 0 010 7.75"></path>
-                                </svg>
-                                <h2 class="title-font font-medium text-3xl text-gray-900">1.3K</h2>
-                                <p class="leading-relaxed">Users</p>
-                            </div>
-                        </div>
-                        <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-                            <div class="border-2 border-gray-200 px-4 py-6 rounded-lg">
-                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                     stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
-                                    <path d="M3 18v-6a9 9 0 0118 0v6"></path>
-                                    <path
-                                            d="M21 19a2 2 0 01-2 2h-1a2 2 0 01-2-2v-3a2 2 0 012-2h3zM3 19a2 2 0 002 2h1a2 2 0 002-2v-3a2 2 0 00-2-2H3z">
-                                    </path>
-                                </svg>
-                                <h2 class="title-font font-medium text-3xl text-gray-900">74</h2>
-                                <p class="leading-relaxed">Files</p>
-                            </div>
-                        </div>
-                        <div class="p-4 md:w-1/4 sm:w-1/2 w-full">
-                            <div class="border-2 border-gray-200 px-4 py-6 rounded-lg">
-                                <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                                     stroke-width="2" class="text-indigo-500 w-12 h-12 mb-3 inline-block" viewBox="0 0 24 24">
-                                    <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path>
-                                </svg>
-                                <h2 class="title-font font-medium text-3xl text-gray-900">46</h2>
-                                <p class="leading-relaxed">Places</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <hr>
+        <div class="w3-third w3-center">
+            <i class="fa fa-desktop w3-padding-64 w3-text-red"></i>
+        </div>
+    </div>
+</div>
 
-            <footer class="text-gray-700 body-font">
-                <div class="container px-5 py-8 mx-auto flex items-center sm:flex-row flex-col">
-                    <a class="flex title-font font-medium items-center md:justify-start justify-center text-gray-900">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round"
-                             stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-indigo-500 rounded-full"
-                             viewBox="0 0 24 24">
-                            <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
-                        </svg>
-                        <span class="ml-3 text-xl">Elementsoftech</span>
-                    </a>
-                    <p class="text-sm text-gray-500 sm:ml-4 sm:pl-4 sm:border-l-2 sm:border-gray-200 sm:py-2 sm:mt-0 mt-4">©️ 2020
-                        tailblocks —
-                        <a href="https://twitter.com/knyttneve" class="text-gray-600 ml-1" rel="noopener noreferrer"
-                           target="_blank">@knyttneve</a>
-                    </p>
-                    <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
-                <a class="text-gray-500">
-                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
-                         viewBox="0 0 24 24">
-                        <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
-                    </svg>
-                </a>
-                <a class="ml-3 text-gray-500">
-                    <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
-                         viewBox="0 0 24 24">
-                        <path
-                                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
-                        </path>
-                    </svg>
-                </a>
-                <a class="ml-3 text-gray-500">
-                    <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                         class="w-5 h-5" viewBox="0 0 24 24">
-                        <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
-                        <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
-                    </svg>
-                </a>
-                <a class="ml-3 text-gray-500">
-                    <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
-                         stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
-                        <path stroke="none"
-                              d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
-                        <circle cx="4" cy="4" r="2" stroke="none"></circle>
-                    </svg>
-                </a>
-            </span>
-                </div>
-            </footer>
+<!-- Second Grid -->
+<div class="w3-row-padding w3-light-grey w3-padding-64 w3-container">
+    <div class="w3-content">
+        <div class="w3-third w3-center">
+            <i class="fa fa-coffee w3-padding-64 w3-text-red w3-margin-right"></i>
+        </div>
+
+        <div class="w3-twothird">
+            <h1>Well see Elementsoftech always had and will love humanity, but nothing can be best so we try to make it better</h1>
+            <h5 class="w3-padding-32">So come on with us have some coffee, sit on your comfy chair and use our amazing applications...
+        </div>
+    </div>
+</div>
+
+<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+    <h1 class="w3-margin w3-xlarge">OUR MOTIVE = HELP YOU...</h1>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-padding-64 w3-center w3-opacity">
+    <div class="w3-xlarge w3-padding-32">
+        <i class="fa fa-facebook-official w3-hover-opacity"></i>
+        <i class="fa fa-instagram w3-hover-opacity"></i>
+        <i class="fa fa-snapchat w3-hover-opacity"></i>
+        <i class="fa fa-pinterest-p w3-hover-opacity"></i>
+        <i class="fa fa-twitter w3-hover-opacity"></i>
+        <i class="fa fa-linkedin w3-hover-opacity"></i>
+    </div>
+    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
+</footer>
+
+<script>
+// Used to toggle the menu on small screens when clicking on the menu button
+function myFunction() {
+  var x = document.getElementById("navDemo");
+  if (x.className.indexOf("w3-show") == -1) {
+    x.className += " w3-show";
+  } else {
+    x.className = x.className.replace(" w3-show", "");
+  }
+}
+</script>
+
 </body>
 </html>
