--- a/home.html
+++ b/home.html
@@ -10,16 +10,15 @@
 <style>
 body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 .w3-bar,h1,button {font-family: "Montserrat", sans-serif}
-.fa-desktop,.fa-coffee {font-size:200px}
+.fa-laptop,.fa-coffee {font-size:200px}
 </style>
 <body>
 
 <!-- Navbar -->
-<!-- Navbar -->
 <div class="w3-top">
     <div class="w3-bar w3-red w3-card w3-left-align w3-large">
         <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-        <a href="home.html" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
+        <a href="#" class="w3-bar-item w3-button w3-padding-large w3-white">Home</a>
         <a href="index.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Products</a>
         <a href="contacts.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contacts</a>
         <a href="you.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Youtube Channel</a>
@@ -36,8 +35,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <header class="w3-container w3-red w3-center" style="padding:128px 16px">
-    <h1 class="w3-margin w3-jumbo">HEY THERE!!!</h1>
-    <p class="w3-xlarge">Looking for something to download? Go down..</p>
+    <h1 class="w3-margin w3-jumbo">ELEMENTSOFTECH</h1>
+    <p class="w3-xlarge">Making things from better to best...</p>
     <img src="bro.png"/>
 </header>
 
@@ -48,14 +47,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
             <h1>Welcome to Elementsoftech...</h1>
             <h5 class="w3-padding-32">Hello , and welcome to Elementsoftech. This is a website for us to show our exclusive projects made by Elementsoftech. We like to help people and we do. We will be posting and helping you...Excited? Well thats just the tip of the iceberg.</h5>
 
-            <p class="w3-text-grey"> VECTOR 5 COMING SOON... WEBHELPER THE AMAZING SOFTWARE FOR FULL AUTOMATION ... RELEASED ON 10 SEPTEMBER 2020... CLICK BELOW LINK TO DOWNLOAD WEBHELPER...WORX YOUR VERY OWN LIGHTWEIGHT AND VERY EFFECTIVE NOTEWRITER AND TEXTEDITOR, ALL TO SAVE .PY, .HTML, .CSS, .JS, .TXT, AND .MD FILES MEANING 6 TYPES OF FILE SAVER IN JUST ONE APPLICATION...CLICK THE LINK SAYING 'DOWNLOAD WORX HERE'...  <p/>
-            <p style="color:#FF0000";></p><a href="WHsetup.exe">DOWNLOAD WEBHELPER HERE...</a>
-            <p style="color:#FF0000";></p><a href="WorX(v1.0).exe">DOWNLOAD WORX HERE</a>
+            <p class="w3-text-grey"> VECTOR 5 COMING SOON... WEBHELPER THE AMAZING SOFTWARE FOR FULL AUTOMATION ... RELEASED ON 10 SEPTEMBER 2020...WORX YOUR VERY OWN LIGHTWEIGHT AND VERY EFFECTIVE NOTEWRITER AND TEXTEDITOR, ALL TO SAVE .PY, .HTML, .CSS, .JS, .TXT, AND .MD FILES MEANING 6 TYPES OF FILE SAVER IN JUST ONE APPLICATION... To download go to products page <p/>
+
         </div>
 
 
         <div class="w3-third w3-center">
-            <i class="fa fa-desktop w3-padding-64 w3-text-red"></i>
+            <i class="fa fa-laptop w3-padding-64 w3-text-red"></i>
         </div>
     </div>
 </div>
@@ -102,6 +100,5 @@ function myFunction() {
   }
 }
 </script>
-
 </body>
 </html>
